  strings.
- Implemented feature request #14257: Problem accessing multiple headers with
  same headername.
- Implemented feature request #14487: Enable ezcMailComposer to specify
  encoding for text and html parts.
- Implemented feature request #14794: Add an option to parse text attachments
  as file part instead of text part.


1.6.3 - Monday 22 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #15068: false ezcMail tests. Based on a patch from Thomas Koch.


1.6.2 - Monday 11 May 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14776: ezcMailStorageSet generates bad file names.


1.6.1 - Monday 09 February 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14242: Cannot append email through IMAP.
- Fixed issue #14360: problems with $imap->top() command in gmail.


1.6 - Monday 05 January 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14220: File attachments mess up emails without body text.


1.6rc1 - Monday 15 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14025: Problem with ezcMailComposer::addAttachment when use the
  fifth param to change the file name.


1.6beta1 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14009: ezcMailTools::validateEmailAddressMx() uses wrong HELO
  domain name.
- The function ezcMailTools::validateEmailAddressMx() throws an exception if
  there is no support for getmxrr() and checkdnsrr().
- Altered the ezcMailTools::validateEmailAddress() regexp to protect against
  locale issues.


1.6alpha1 - Monday 10 November 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #13383: Add a method to extract/change/replace entities in